--- a/CRM_beta/CRM/core_app/templates/core_app/base.html
+++ b/CRM_beta/CRM/core_app/templates/core_app/base.html
@@ -13,14 +13,20 @@
         <a href="{% url 'core_app:about' %}" class="text-white">About</a>
         {% if request.user.is_authenticated %}
         <a
-          href="{% url 'userprofile:logout' %}"
-          class="py-2 px-3 bg-red-600 rounded-xl text-white"
-          >Log out</a
-        >
-        <a
           href="{% url 'dashboard:dashboard' %}"
           class="py-2 px-3 bg-indigo-700 rounded-xl text-white"
           >Dashboard</a
+        >
+
+        <a
+          href="{% url 'lead:leads_list' %}"
+          class="py-2 px-3 bg-indigo-700 rounded-xl text-white"
+          >Leads</a
+        >
+        <a
+          href="{% url 'userprofile:logout' %}"
+          class="py-2 px-3 bg-red-600 rounded-xl text-white"
+          >Log out</a
         >
         {% else %}
         <a
@@ -36,7 +42,15 @@
         {% endif %}
       </div>
     </nav>
-    {% block content %} {% endblock %}
+    {% if messages %}
+    <div class="py-4 px-4">
+      {% for message in messages %}
+      <div class="py-4 px-4 bg-teal-300 text-white rounded-xl">
+        {{ message }}
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %} {% block content %} {% endblock %}
 
     <footer class="py-4 text-center bg-gray-200">
       <p class="text-xs text-gray-800">Copyright (c) 2023 - CRM</p>
