--- a/CRM_beta/CRM/lead/templates/lead/leads_detail.html
+++ b/CRM_beta/CRM/lead/templates/lead/leads_detail.html
@@ -22,6 +22,11 @@
 
   <hr class="my-3" />
   <a
+    href="{% url 'lead:leads_convert' lead.id %}"
+    class="py-2 px-4 rounded-xl bg-blue-500 text-white"
+    >Convert to client</a
+  >
+  <a
     href="{% url 'lead:leads_edit' lead.id %}"
     class="py-2 px-4 rounded-xl bg-indigo-500 text-white"
     >Edit</a
