--- a/CRM_beta/CRM/core_app/templates/core_app/base.html
+++ b/CRM_beta/CRM/core_app/templates/core_app/base.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'main.min.css' %}" />
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
@@ -12,47 +13,21 @@
       <div class="space-x-1">
         <a href="{% url 'core_app:about' %}" class="text-white">About</a>
         {% if request.user.is_authenticated %}
-        <a
-          href="{% url 'dashboard:dashboard' %}"
-          class="py-2 px-3 bg-indigo-700 rounded-xl text-white"
-          >Dashboard</a
-        >
+        <a href="{% url 'dashboard:dashboard' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Dashboard</a>
 
-        <a
-          href="{% url 'lead:leads_list' %}"
-          class="py-2 px-3 bg-indigo-700 rounded-xl text-white"
-          >Leads</a
-        >
-        <a
-          href="{% url 'client_app:clients_list' %}"
-          class="py-2 px-3 bg-indigo-700 rounded-xl text-white"
-          >Clients</a
-        >
-        <a
-          href="{% url 'acount' %}"
-          class="py-2 px-3 bg-indigo-800 rounded-xl text-white"
-          >My account</a
-        >
+        <a href="{% url 'lead:leads_list' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Leads</a>
+        <a href="{% url 'client_app:clients_list' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Clients</a>
+        <a href="{% url 'acount' %}" class="py-2 px-3 bg-indigo-800 rounded-xl text-white">My account</a>
         {% else %}
-        <a
-          href="{% url 'userprofile:login' %}"
-          class="py-2 px-3 bg-indigo-700 rounded-xl text-white"
-          >Log in</a
-        >
-        <a
-          href="{% url 'userprofile:signup' %}"
-          class="py-2 px-3 bg-indigo-700 rounded-xl text-white"
-          >Sign up</a
-        >
+        <a href="{% url 'userprofile:login' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Log in</a>
+        <a href="{% url 'userprofile:signup' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Sign up</a>
         {% endif %}
       </div>
     </nav>
     {% if messages %}
     <div class="py-4 px-4">
       {% for message in messages %}
-      <div class="py-4 px-4 bg-teal-300 text-white rounded-xl">
-        {{ message }}
-      </div>
+      <div class="py-4 px-4 bg-teal-300 text-white rounded-xl">{{ message }}</div>
       {% endfor %}
     </div>
     {% endif %} {% block content %} {% endblock %}
