--- a/CRM_beta/CRM/lead/templates/lead/leads_detail.html
+++ b/CRM_beta/CRM/lead/templates/lead/leads_detail.html
@@ -1,5 +1,4 @@
-{% extends 'core_app/base.html' %} {% block title %} {{ lead.name }}
-{%endblock%} {% block content %}
+{% extends 'core_app/base.html' %} {% block title %} {{ lead.name }} {%endblock%} {% block content %}
 <div class="py-4 px-4">
   <h1 class="mb-4 text-xl">{{ lead.name }}</h1>
 
@@ -21,18 +20,16 @@
   <p class="mb-6">{{lead.modified_at| date:"d.M.Y H:i"}}</p>
 
   <hr class="my-3" />
-  <a
-    href="{% url 'lead:leads_convert' lead.id %}"
-    class="py-2 px-4 rounded-xl bg-blue-500 text-white"
+
+  <form id="lead_delete_form" method="post" action="{% url 'lead:leads_delete' lead.id %}">{% csrf_token %}</form>
+
+  <a href="{% url 'lead:leads_convert' lead.id %}" class="py-2 px-4 rounded-xl bg-blue-500 text-white"
     >Convert to client</a
   >
+  <a href="{% url 'lead:leads_edit' lead.id %}" class="py-2 px-4 rounded-xl bg-indigo-500 text-white">Edit</a>
   <a
-    href="{% url 'lead:leads_edit' lead.id %}"
-    class="py-2 px-4 rounded-xl bg-indigo-500 text-white"
-    >Edit</a
-  >
-  <a
-    href="{% url 'lead:leads_delete' lead.id %}"
+    href="#"
+    onclick="document.getElementById('lead_delete_form').submit();"
     class="py-2 px-4 rounded-xl bg-red-500 text-white"
     >Delete</a
   >
