--- a/CRM_beta/CRM/lead/templates/lead/leads_detail.html
+++ b/CRM_beta/CRM/lead/templates/lead/leads_detail.html
@@ -35,6 +35,24 @@
   >
 
   <hr class="my-3" />
+  <h2 class="text-2xl">Comments</h2>
+
+  <div class="space-y-4">
+    {% for comment in lead.comments.all %}
+    <div class="bg-gray-100 p-6 rounded-xl">
+      <p class="mb-2"><strong>{{ comment.created_by }}</strong> - {{ comment.created_at }}</p>
+      {{ comment.content }}
+    </div>
+
+    {% endfor %}
+  </div>
+
+  <form method="post" action="{% url 'lead:add_comment' lead.id %}">
+    {% csrf_token %} {{ form.as_p }}
+    <button class="py-2 px-4 rounded-xl bg-blue-500 text-white">Submit</button>
+  </form>
+
+  <hr class="my-3" />
 
   <a href="{% url 'lead:leads_list' %}">Back</a>
 </div>
