--- a/CRM_beta/CRM/client_app/templates/client_app/client_detail.html
+++ b/CRM_beta/CRM/client_app/templates/client_app/client_detail.html
@@ -43,6 +43,21 @@
     {% csrf_token %} {{ form.as_p }}
     <button class="py-2 px-4 rounded-xl bg-blue-500 text-white">Submit</button>
   </form>
+  <hr class="my-3" />
+  <h2 class="text-2xl">Files</h2>
+  <div class="space-y-4">
+    {% for file in client.files.all %}
+    <div class="bg-gray-100 p-6 rounded-xl">
+      <p class="mb-2"><strong>{{ file.created_by }}</strong> - {{ file.created_at }}</p>
+      <a href=" {{ file.file.url }}">Download</a>
+    </div>
+
+    {% endfor %}
+  </div>
+  <form method="post" action="{% url 'client_app:add_file' client.id %}" enctype="multipart/form-data">
+    {% csrf_token %} {{ fileform.as_p }}
+    <button class="py-2 px-4 rounded-xl bg-blue-500 text-white">Submit</button>
+  </form>
 
   <hr class="my-3" />
 
