--- a/CRM_beta/CRM/client_app/templates/client_app/client_list.html
+++ b/CRM_beta/CRM/client_app/templates/client_app/client_list.html
@@ -1,12 +1,13 @@
-{% extends 'core_app/base.html' %} {% block title %} Client {% endblock %}
-{%block content %}
+{% extends 'core_app/base.html' %} {% block title %} Client {% endblock %} {%block content %}
 <div class="py-4 px-4">
   <h1 class="mb-4 text-xl">Client</h1>
-  <a
-    href="{% url 'client_app:clients_add' %}"
-    class="inline-block py-2 px-3 bg-indigo-700 rounded-xl text-white"
+  <a href="{% url 'client_app:clients_add' %}" class="inline-block py-2 px-3 bg-indigo-700 rounded-xl text-white"
     >Add Client</a
   >
+  <a href="{% url 'client_app:export' %}" class="inline-block py-2 px-3 rounded-xl bg-indigo-500 text-white"
+    >Export clients</a
+  >
+
   {% if clients %}
   <div class="mt-4 flex justify-between">
     <p class="py-3 px bg-gray-200 font-semibold w-full">Name</p>
@@ -14,9 +15,7 @@
   {% for client in clients %}
   <div class="flex justify-between">
     <p class="py-2 px-2 w-full {% cycle 'bg-gray-100' '' %}">
-      <a href="{% url 'client_app:clients_detail' client.id %}"
-        >{{client.name}}</a
-      >
+      <a href="{% url 'client_app:clients_detail' client.id %}">{{client.name}}</a>
     </p>
   </div>
 
