--- a/CRM_beta/CRM/core_app/templates/core_app/base.html
+++ b/CRM_beta/CRM/core_app/templates/core_app/base.html
@@ -8,32 +8,12 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="py-4 px-4 flex justify-between bg-indigo-600">
-      <a href="/" class="text-white">CRM(beta)</a>
-      <div class="space-x-1">
-        <a href="{% url 'core_app:about' %}" class="text-white">About</a>
-        {% if request.user.is_authenticated %}
-        <a href="{% url 'dashboard:dashboard' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Dashboard</a>
-
-        <a href="{% url 'lead:leads_list' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Leads</a>
-        <a href="{% url 'client_app:clients_list' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Clients</a>
-        <a href="{% url 'acount' %}" class="py-2 px-3 bg-indigo-800 rounded-xl text-white">My account</a>
-        {% else %}
-        <a href="{% url 'userprofile:login' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Log in</a>
-        <a href="{% url 'userprofile:signup' %}" class="py-2 px-3 bg-indigo-700 rounded-xl text-white">Sign up</a>
-        {% endif %}
-      </div>
-    </nav>
-    {% if messages %}
+    {% include 'core_app/partials/nav.html' %} {% if messages %}
     <div class="py-4 px-4">
       {% for message in messages %}
       <div class="py-4 px-4 bg-teal-300 text-white rounded-xl">{{ message }}</div>
       {% endfor %}
     </div>
-    {% endif %} {% block content %} {% endblock %}
-
-    <footer class="py-4 text-center bg-gray-200">
-      <p class="text-xs text-gray-800">Copyright (c) 2023 - CRM</p>
-    </footer>
+    {% endif %} {% block content %} {% endblock %} {% include 'core_app/partials/footler.html' %}
   </body>
 </html>
