--- a/CRM_beta/CRM/userprofile/templates/userprofile/login_page.html
+++ b/CRM_beta/CRM/userprofile/templates/userprofile/login_page.html
@@ -1,8 +1,9 @@
-{% extends 'core_app/base.html' %} {% block title %} Log in! {% endblock %}
-{%block content %}
-<h1 class="text-xl">Log in!!</h1>
-<form method="POST" action=".">
-  {% csrf_token %} {{form.as_p}}
-  <button class="py-4 px-8 bg-indigo-700 text-white rounded-xl">Submit</button>
-</form>
+{% extends 'core_app/base.html' %} {% block title %} Log in! {% endblock %} {%block content %}
+<div class="py-6 px-6">
+  <h1 class="mb-6 text-xl">Log in</h1>
+  <form method="POST" action=".">
+    {% csrf_token %} {{form.as_p}}
+    <button class="mt-6 py-4 px-8 bg-indigo-700 text-white rounded-xl">Submit</button>
+  </form>
+</div>
 {% endblock %}
